# sveltekit-axum

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20250121060519_create_posts_table.up.sql
backend/src/: handlers.rs  main.rs  routes.rs
backend/src/auth/: jwk.rs  mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: post_handler.rs
backend/src/models/: post.rs
backend/src/routes/: post_routes.rs
backend/src/services/: post_service.rs
cdk/: cdk.context.json  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
config/: servers.json
frontend/: package-lock.json  package.json
