[package]
edition = "2021"
name = "backend"
version = "0.1.0"

[dependencies]
axum = "0.6"
base64 = "0.22"
dotenvy = "0.15.7"
jsonwebtoken = "9.3"
lambda_http = "0.7"
once_cell = "1.20"
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.28", features = ["macros"]}
