[package]
edition = "2021"
name = "backend"
version = "0.1.0"

[dependencies]
axum = "0.6"
base64 = "0.22"
dotenvy = "0.15.7"
env_logger = "0.9"
hyper = "0.14"
jsonwebtoken = "9.3"
lambda_http = "0.7"
lambda_runtime = "0.7"
log = "0.4"
once_cell = "1.20"
openssl = {version = "0.10", features = ["vendored"]}
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = {version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "macros"]}
tokio = {version = "1.28", features = ["macros"]}
tower = "0.4"
